--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           app-name: springboot-demo
           publish-profile: ${{ secrets.azureWebAppPublishProfile }}
-          package: ${{ github.workspace }}/demo/*.jar
+          package: '/*.jar*
