updated deployment5 to app service

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,4 +41,4 @@ jobs:
         with:
           app-name: springboot-demo
           publish-profile: ${{ secrets.azureWebAppPublishProfile }}
-          package: '/*.jar*
+          package: '/*.jar*'
